# docsmint

./: .gitignore  README.md  astro.config.mjs  mkdocx.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.ci/: build.yaml
public/: llms.txt
python/: __init__.py  cli.py  context_reference.md
python/template/: astro.config.mjs  package.json
python/template/src/: content.config.ts
python/template/src/components/: FileTree.astro  Mermaid.astro  Nav.astro  Search.astro  Sidebar.astro
python/template/src/layouts/: Base.astro
python/template/src/pages/: 404.astro  index.astro
python/template/src/pages/docs/: index.astro
python/template/src/pages/writing/: index.astro
python/template/src/styles/: global.css
src/content/docs/: components.mdx  configuration.md  deploying.md  getting-started.mdx  reference.md  writing-content.md
src/content/writing/: hello-world.md  how-to-write-docs.md
src/layouts/: Base.astro
src/pages/writing/: [...slug].astro  index.astro
src/styles/: global.css
