[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocx"
version = "0.0.0"
description = "Minimal markdown documentation builder."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["docs", "documentation", "markdown", "static-site"]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4"]

[project.scripts]
mkdocx = "python.cli:main"

[tool.setuptools.packages.find]
include = ["python*"]

[tool.setuptools.package-data]
# Bundle the entire Astro template and LLM context reference inside the pip package
python = [
    "template/**/*",
    "template/*",
    "context_reference.md",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
